FIX: Align css to reflect AA Times Phase 3 project requirements

--- a/stylesheets/components/interest-links.css
+++ b/stylesheets/components/interest-links.css
@@ -4,16 +4,15 @@
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr 2fr 1fr 0.75fr;
     grid-template-rows: 1fr;
     gap: 0.2rem;
-    padding-top: 1rem;
+    padding: 1rem 0;
     font-size: 12px;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
 .interest-bar > div {
     /* border: 1px solid red; */
     box-sizing: border-box;
     padding: 1rem 0.2rem;
-}
-.interest-bar > div >div {
-    /* border: 1px solid green; */
 }
 .interest-bar__story-title {
     padding: 1rem 0.3rem;
